MAJ-WEB connect page
Signed-off-by: Charles RENAUX <charles.renaux@hei.yncrea.fr>

--- a/src/main/webapp/WEB-INF/templates/app/connect.html
+++ b/src/main/webapp/WEB-INF/templates/app/connect.html
@@ -3,18 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Connect - MPB</title>
+    <LINK href="css/connexion.css" rel="stylesheet" type="text/css">
 </head>
+
+
 <body>
+	<section id="main">
+		<h1>Connexion</h1>
+		<form>
+        <h3>Pseudo</h3>
+        <input id="boite" type="text" name="pseudo" /><br />
+        <h3>Mot de passe</h3>
+        <input id="boite" type="password" name="mdp" /><br />
+        <input id="connexion" type="submit" value="Connexion"/>
+        </form>
+	</section>
 
-<a href="/">Revenir à l'accueil</a>
+	<div>
+		<a href="Page_d_inscription.html">Pas encore inscrit ? Cliquez ici</a>
+	</div>
 
-<main>
-    <div id="article">
-        <h1>Formulaire de Connexion</h1>
-    </div>
-</main>
-
-
-
+	<div id="retour">
+		<a id="retour" href="acceuil.html"> &#8592 Retour à la page d'accueil </a>
+	</div>
 </body>
+
+
 </html>
