MAJ-Web/Css Fin connexion/inscription html/css
Signed-off-by: Charles RENAUX <charles.renaux@hei.yncrea.fr>

--- a/src/main/webapp/WEB-INF/templates/app/connect.html
+++ b/src/main/webapp/WEB-INF/templates/app/connect.html
@@ -20,11 +20,11 @@
 	</section>
 
 	<div>
-		<a href="Page_d_inscription.html">Pas encore inscrit ? Cliquez ici</a>
+		<a href="register">Pas encore inscrit ? Cliquez ici</a>
 	</div>
 
 	<div id="retour">
-		<a id="retour" href="acceuil.html"> &#8592 Retour à la page d'accueil </a>
+		<a id="retour" href="index"> &#8592 Retour à la page d'accueil </a>
 	</div>
 </body>
 
