--- a/src/main/webapp/WEB-INF/templates/home/fragments/base.html
+++ b/src/main/webapp/WEB-INF/templates/home/fragments/base.html
@@ -21,9 +21,9 @@
                     <li><a href="/beginner">Les Bookmakers</a></li>
                 </ul>
             </li>
-            <li><a href="/contact">Nous Contacter</a> </li>
-            <li><a href="/register">S'Inscrire</a></li>
-            <li><a href="/connect">Se Connecter</a> </li>
+            <li><a href="contact">Nous Contacter</a> </li>
+            <li><a href="register">S'Inscrire</a></li>
+            <li><a href="connect">Se Connecter</a> </li>
         </ul>
     </nav>
 </div>
